frontend/test/should_fail/exec_021.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    return (y);
    exec(c:B=y & (c:B)=r(c) & (c)=r(c));
  }
}
